[gd_scene load_steps=44 format=3 uid="uid://bl70rubyxykuy"]

[ext_resource type="Texture2D" uid="uid://b7nopivhs64y" path="res://godot-game/images/craftpix-net-396765-free-simple-platformer-game-kit-pixel-art/4 Enemies/1/Fall.png" id="1_rngkp"]
[ext_resource type="Script" path="res://enemy_tv.gd" id="1_w5r8d"]
[ext_resource type="Texture2D" uid="uid://cmxsot2qxx7dm" path="res://godot-game/images/craftpix-net-396765-free-simple-platformer-game-kit-pixel-art/4 Enemies/1/Hit.png" id="2_effx3"]
[ext_resource type="Texture2D" uid="uid://lw103e0pb5an" path="res://godot-game/images/craftpix-net-396765-free-simple-platformer-game-kit-pixel-art/4 Enemies/1/Idle.png" id="3_bxgeu"]
[ext_resource type="Texture2D" uid="uid://c3md23ubbfbu1" path="res://godot-game/images/craftpix-net-396765-free-simple-platformer-game-kit-pixel-art/4 Enemies/1/Jump.png" id="4_ah8dv"]
[ext_resource type="Texture2D" uid="uid://bpggktn73w3bq" path="res://godot-game/images/craftpix-net-396765-free-simple-platformer-game-kit-pixel-art/4 Enemies/1/Run.png" id="5_4ibwd"]
[ext_resource type="PackedScene" uid="uid://0e64jei85yn6" path="res://zona_de_muerte.tscn" id="6_8gphb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mhjrw"]
atlas = ExtResource("1_rngkp")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_voqto"]
atlas = ExtResource("1_rngkp")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn0qi"]
atlas = ExtResource("1_rngkp")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d20td"]
atlas = ExtResource("2_effx3")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo1r0"]
atlas = ExtResource("2_effx3")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut8kd"]
atlas = ExtResource("2_effx3")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxa2q"]
atlas = ExtResource("2_effx3")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2063"]
atlas = ExtResource("2_effx3")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fctm"]
atlas = ExtResource("3_bxgeu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a2ri"]
atlas = ExtResource("3_bxgeu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxo55"]
atlas = ExtResource("3_bxgeu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y62ns"]
atlas = ExtResource("3_bxgeu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwsuh"]
atlas = ExtResource("3_bxgeu")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k5gk"]
atlas = ExtResource("3_bxgeu")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrf6i"]
atlas = ExtResource("3_bxgeu")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsk1p"]
atlas = ExtResource("3_bxgeu")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2v3m"]
atlas = ExtResource("3_bxgeu")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_753bp"]
atlas = ExtResource("3_bxgeu")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fagrs"]
atlas = ExtResource("3_bxgeu")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3mks"]
atlas = ExtResource("4_ah8dv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bkyg"]
atlas = ExtResource("4_ah8dv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g01gh"]
atlas = ExtResource("4_ah8dv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwwsk"]
atlas = ExtResource("5_4ibwd")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_12bpm"]
atlas = ExtResource("5_4ibwd")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eurn3"]
atlas = ExtResource("5_4ibwd")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_25xwu"]
atlas = ExtResource("5_4ibwd")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdngs"]
atlas = ExtResource("5_4ibwd")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m1wr"]
atlas = ExtResource("5_4ibwd")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq7dp"]
atlas = ExtResource("5_4ibwd")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc5gt"]
atlas = ExtResource("5_4ibwd")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_22efp"]
atlas = ExtResource("5_4ibwd")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvnfy"]
atlas = ExtResource("5_4ibwd")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqxhj"]
atlas = ExtResource("5_4ibwd")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s01jr"]
atlas = ExtResource("5_4ibwd")
region = Rect2(528, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_n3c1d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhjrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voqto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn0qi")
}],
"loop": true,
"name": &"fall",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d20td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo1r0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut8kd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxa2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2063")
}],
"loop": true,
"name": &"hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fctm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a2ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxo55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y62ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwsuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k5gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrf6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsk1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2v3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_753bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fagrs")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3mks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bkyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g01gh")
}],
"loop": true,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwwsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12bpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eurn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25xwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdngs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m1wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq7dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc5gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22efp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvnfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqxhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s01jr")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1dmv7"]
height = 22.0

[node name="enemy_tv" type="Node2D"]
script = ExtResource("1_w5r8d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -10)
sprite_frames = SubResource("SpriteFrames_n3c1d")
animation = &"idle"
autoplay = "idle"

[node name="Zona de muerte" parent="AnimatedSprite2D" instance=ExtResource("6_8gphb")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Zona de muerte"]
position = Vector2(0, 12)
shape = SubResource("CapsuleShape2D_1dmv7")

[node name="RayCastleft" type="RayCast2D" parent="."]
position = Vector2(1, 0)
rotation = 1.5708
target_position = Vector2(6.11959e-07, 14)

[node name="RayCastright" type="RayCast2D" parent="."]
position = Vector2(1, 0)
rotation = -1.5708
target_position = Vector2(-5.24537e-07, 12)

[connection signal="ready" from="." to="." method="_on_ready"]
